small push befor major changes

--- a/src/configs/multimodal_training_config.yaml
+++ b/src/configs/multimodal_training_config.yaml
@@ -13,7 +13,10 @@ dataset:
 model:
   image_layers: [10000, 1500, 500]
   text_layers: [64, 256]
-  text_posenc_dim: 32
+  text_posenc_dim: 0
+  label_smooth_sigma: 0.5   # e.g., 1.0 to add Gaussian-smoothed label features
+  include_label_scalar: true # include normalized label index [0,1] (+ Fourier if enabled)
+  label_fourier_k: 0         # number of Fourier pairs (sin/cos), 0 disables
   joint_hidden: 512
 
 # Training hyperparameters
@@ -25,17 +28,20 @@ training:
   learning_rate_dynamic: true
   cd: 1
   epochs_image: 100
-  epochs_text: 30
+  epochs_text: 10
   epochs_joint: 200
-  joint_mask_p: 0.1
-  joint_warmup_epochs: 50
-  joint_cd: 10
-  cross_gibbs_steps: 50
+  joint_cd: 5
+  cross_gibbs_steps: 100
+  # Auxiliary clamped-CD (unsupervised conditional strengthening)
+  joint_aux_every_k: 2        # run aux clamped-CD every k batches
+  joint_aux_cd: 1             # CD steps for auxiliary update
+  joint_aux_cond_steps: 25    # conditional Gibbs steps to fill missing modality
+  joint_aux_lr_scale: 0.2     # scale factor on joint LR during aux update
   log_every_pca: 25
   log_every_probe: 5
   w_rec: 5.0
   w_sup: 0.0
-  text_learning_rate: 0.05
+  text_learning_rate: 0.01
   joint_learning_rate: 0.05
 
 # Output locations
