--- a/src/configs/multimodal_training_config.yaml
+++ b/src/configs/multimodal_training_config.yaml
@@ -1,7 +1,3 @@
-# multimodal_training_config.yaml
-# Configuration file for multimodal iDBN training.
-
-# Dataset settings
 dataset:
   path: "/home/student/Desktop/Groundeep/stimuli_dataset_adaptive_auto"
   name: "stimuli_dataset.npz"
@@ -9,18 +5,13 @@ dataset:
   num_workers: 1
   multimodal_flag: true
 
-# Model architecture
 model:
-  image_layers: [10000, 1500, 1500]
-  text_layers: [64, 256]
-  text_posenc_dim: 0
-  label_smooth_sigma: 0   # e.g., 1.0 to add Gaussian-smoothed label features
-  include_label_scalar: false # include normalized label index [0,1] (+ Fourier if enabled)
-  label_fourier_k: 0         # number of Fourier pairs (sin/cos), 0 disables
-  joint_hidden: 1000
+  image_layers: [10000, 1500, 1500]   # se carichi un pretrained con top=500, il joint si adatta
+  joint_hidden: 500
+  num_labels: 32
 
-# Training hyperparameters
 training:
+  # Unimodali (immagine)
   learning_rate: 0.1
   weight_penalty: 0.0001
   init_momentum: 0.5
@@ -28,29 +19,35 @@ training:
   learning_rate_dynamic: true
   cd: 10
   epochs_image: 100
-  epochs_text: 10
-  epochs_joint: 200
-  joint_cd: 3
-  cross_gibbs_steps: 100
-  # Auxiliary clamped-CD (unsupervised conditional strengthening)
-  joint_aux_every_k: 1        # run aux clamped-CD every k batches
-  joint_aux_cd: 1             # CD steps for auxiliary update
-  joint_aux_cond_steps: 50    # conditional Gibbs steps to fill missing modality
-  joint_aux_lr_scale: 0.2     # scale factor on joint LR during aux update
-  log_every_pca: 25
-  log_every_probe: 5
-  w_rec: 5.0
-  w_sup: 0.0
-  text_learning_rate: 0.01
-  joint_learning_rate: 0.005
 
-# Output locations
+  # Joint (semplice)
+  joint_learning_rate: 0.1
+  joint_cd: 20
+  epochs_joint: 200
+
+  # Cross-modality (sampling length)
+  cross_gibbs_steps: 30
+
+  # Aux clamped-CD (on/off)
+  use_aux: true
+  JOINT_AUX_COND_STEPS: 5
+  JOINT_AUX_EVERY_K: 50
+
+  # Logging
+  log_every: 5
+  log_every_pca: 25
+  log_every_probe: 10
+
 paths:
   save_dir: "/home/student/Desktop/Groundeep/networks/uniform/imdbn"
   save_name: "imdbn_trained_uniform"
+
+  # opzionale: iDBN visiva pre-allenata
   image_idbn_pretrained: "/home/student/Desktop/Groundeep/networks/uniform/networks_probing/idbn_new_dataset_200_epochs_i_dbn_trained_uniform_1500_1500.pkl"
 
-# Logging
+  # opzionale: micro fine-tuning SOLO ultima RBM immagine (0 = disattivo)
+  image_idbn_finetune_last_epochs: 0
+
 wandb:
   enable: true
   project: "groundeep-diagnostics-multimodal"
