pushing-updates-before-branch-switch

--- a/src/configs/analysis.yaml
+++ b/src/configs/analysis.yaml
@@ -7,7 +7,7 @@
 seed: 42
 use_wandb: false
 wandb_project: numerosity-offline
-output_root: results/analysis
+output_root: results/analysis2
 val_size: 0.05
 anchor: 0
 
